fix: fix Modal position in DOM in order to avoid Safari fixed position and overflow hidden bug

--- a/lucuberate-client/src/App.css
+++ b/lucuberate-client/src/App.css
@@ -230,8 +230,8 @@ html,
 #root,
 .app {
   height: 100vh;
-  overflow-x: hidden;
-  overflow-y: hidden;
+  overflow: hidden;
+  position: relative;
 }
 
 .container-row {
@@ -997,8 +997,15 @@ hr {
 }
 
 .category-container {
+  display: grid;
+  grid-template-columns: 1fr;
   position: relative;
   z-index: 0;
+}
+
+.cat-item {
+  grid-row-start: 1;
+  grid-column-start: 1;
 }
 
 .category-btn-cover {
@@ -1011,8 +1018,7 @@ hr {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  position: absolute;
-  top: 0;
+  z-index: 2;
   height: 52px;
   pointer-events: none;
   width: 100%;
@@ -1047,8 +1053,8 @@ hr {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  bottom: 0;
-  position: relative;
+  /* bottom: 0; */
+  /* position: relative; */
   width: 0;
   min-width: 0;
   z-index: 15;
@@ -1066,6 +1072,7 @@ hr {
   border-bottom: 1px solid var(--cube-ctrl-header-border-color);
   -webkit-box-shadow: -5px -4px 3px 3px var(--category-select);
   box-shadow: -5px -4px 3px 3px var(--category-select);
+  overflow: hidden;
 }
 
 .cube-list-grp {
@@ -1389,7 +1396,6 @@ img.visual-aid-preview {
   -ms-flex-align: center;
   align-items: center;
   width: 68vmin;
-  /* height: 60vmin; */
   -webkit-perspective: 560vmin;
   perspective: 560vmin;
 }
